          with the 'mtn' scheme misses the required host part
          (fixes monotone issue 110)

        - whenever a binary file was removed and one would try to get
          a diff using mtn diff, it would report that "/dev/null is
          binary".  This has been changed to it reports the actual
          name of the removed file instead.
          (fixes monotone issue 111)

        - mtn pull and mtn sync would always say that your workspace
          has not been updated.  Now, it only does that when you used
          the --update option and there were no updates.
          (fixes monotone issue 106)

        Internal

        Other

        - Added the mtn-cleanup Perl script that returns a workspace to its
          pristine state with the minimum amount of change. This script is
          under the contrib directory.


Sun Oct 31 21:51:16 UTC 2010

        0.99.1 release.

        Bugs fixed

        - monotone crashed on x86_64 when a netsync action required
          the parsing of an URL. This has been fixed.
          (closes monotone issue 100)

        - monotone's automation interface version was reported wrongly
          as 12.1, where it should have been 13.0.


Thu Oct 28 21:07:18 UTC 2010

        0.99 release.

        Changes

        - The database scheme was changed; please execute 'mtn db migrate'
          on all your local and remote databases.

        - Normal and automate sync, push, and pull now take a
          --dry-run option; no data is transferred, but the connection
          is made and a summary of what would be transferred is
          output.

        - The changelog editor format was simplified; user entered text
          is back at the top of file and the instructions have been reduced.
          The edited text is saved now even if a commit is canceled.

        - Selectors are much more powerful now and selector functions to
          calculate common sets of revisions have been introduced.